--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -86,8 +86,68 @@
 /*991 и меньше */
 @media only screen and (max-width : 991px) {
 	
-}
+    .header-content{
+        h3{
+            font-size: 52px;
+            z-index: 1;
+        }
+        h4{
+            font-size: 100px;
+            line-height: 1;
+            z-index: 1;
+        }
+        a.learn-more-btn{
+            // z-index: 2;
+        }
+    }
+    .subheader{
+        .subheader__top{
+            justify-content: center;
 
+            .nav-wrap{
+                // display: none;
+                position: fixed;
+                width: 300px;
+                height: 510px;
+                top: 0;
+                right: -320px;
+                background-color: #fce38a;
+                border-bottom-left-radius: 5px;
+                box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+                transition: .5s;
+                z-index: 5;
+                
+        
+                ul{
+                    flex-direction: column;
+                    width: 100%;
+                    
+                    margin-left: 37px;
+                        margin-top: 30px;
+                    
+                    li{
+                        
+                    
+                        a{
+                            font-family: 'Montserrat', sans-serif;
+                            font-size: 34px;
+                            line-height: 2;
+                            text-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+                            
+                            &:hover, &:active{
+                                color: #fff;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .toggle-button {
+        display: block;
+    }
+}
+ 
 /*880 и меньше */
 @media only screen and (max-width : 880px) {
 	
@@ -96,7 +156,43 @@
 
 /*768 и меньше */
 @media only screen and (max-width : 768px) {
+    @include divHeight($height: 700px);
     
+    .header-content{
+        h3{
+            font-size: 42px;
+        }
+        h4{
+            font-size: 70px;
+        }
+    }
+    
+    .subheader{
+
+        .subheader__bottom{
+            
+            ul.carousel-dots{
+
+                justify-content: center;
+            
+                li{
+                    width: 70px;
+
+                    margin: 0 5px;
+
+                    .carousel-dots__title{
+                        display: none;
+                    }
+
+                    &:before{
+                        bottom:9px;
+                    }
+                }
+
+            }
+
+        }
+    }
 }
 
 /*621 и меньше */
@@ -108,9 +204,93 @@
 /*576 и меньше */
 @media only screen and (max-width: 576px) {
 	
-}	
+}
+
+/*420 и меньше */
+@media only screen and (max-width : 420px) {
+    @include divHeight($height: 600px);
+    
+    .header-content{
+        h3{
+            font-size: 29px;
+        }
+        h4{
+            font-size: 50px;
+        }
+    }
+
+    .subheader{
+
+        .subheader__bottom{
+            
+            ul.carousel-dots{
+
+                justify-content: space-evenly;
+            
+                li{
+                    width: 55px;
+                    margin: 0;
+
+                    .carousel-dots__title{
+                        display: none;
+                    }
+
+                    &:before{
+                        bottom:9px;
+                        width: 55px;
+                    }
+                }
+
+            }
+
+        }
+    }
+}
 
 /*320 и меньше */
 @media only screen and (max-width : 320px) {
-	
+	@include divHeight($height: 500px);
+    .subheader{
+
+        .subheader__bottom{
+            
+            ul.carousel-dots{
+
+                justify-content: space-between;
+
+            }
+
+        }
+
+        .subheader__top{
+
+            .nav-wrap{
+                width: 100%;
+                height: 450px;
+                border-bottom-right-radius: 5px;
+            
+
+            ul{
+
+                li{
+                    a{
+                        font-size: 29px;
+                    }
+                }
+            }
+        }
+        }
+
+    }
+
+    
+
+    .header-content{
+        h3{
+            font-size: 25px;
+        }
+        h4{
+            font-size: 41px;
+        }
+    }
 }
