--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -1,17 +1,18 @@
 header{
+    height: $height;
+}
+
+.slider{
     position: absolute;
     width: 100%;
     height: $height;
 }
 
 .slide-img{
-    // background: url(../img/slider-background.png) no-repeat center top fixed;
     position: relative;
-  background: url('../img/slider-background.png');
-//   background-size: cover;
-  width: 100%;
-    // max-height: 1000px;
-    height: $height;
+    background: url('../img/slider-background.png');
+    width: 100%;
+    height: 100%;
     background-size: cover;
     background-position: center;
   
@@ -213,24 +214,7 @@ header{
                         opacity: 1;
                     }
                 }
-
-
-                // &:before{
-                //     position: absolute;
-                //     content: '';
-                //     width: 100%;
-                //     height: 0;    
-                //     left:0;
-                //     opacity: 0.7;
-                //     bottom: 45px;
-                    
-                // }
             }
-            
-
-        
-            
-
         }
     }
 }
