--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -96,16 +96,12 @@
             line-height: 1;
             z-index: 1;
         }
-        a.learn-more-btn{
-            // z-index: 2;
-        }
     }
     .subheader{
         .subheader__top{
             justify-content: center;
 
             .nav-wrap{
-                // display: none;
                 position: fixed;
                 width: 300px;
                 height: 510px;
@@ -116,6 +112,7 @@
                 box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
                 transition: .5s;
                 z-index: 5;
+                opacity: .95;
                 
         
                 ul{
