--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -23,7 +23,7 @@ header{
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background-image: linear-gradient(0.0deg, #fce38a 0%, #f38181 100%);
+	background-image: linear-gradient(0.0deg, $color-yellow 0%, $color-red 100%);
 	opacity: .9; 
   }
 }
@@ -61,7 +61,6 @@ header{
             bottom: -70px;
             left: 50%; 
             margin-left:-30px;
-            right: auto;
             width: 60px;
             border-bottom: 3px solid #ffffff;
             z-index: 3;
@@ -149,11 +148,11 @@ header{
                             opacity: 0;
                             bottom: 0px;
                             transition: all 0.5s;
-                            border-bottom: 2px solid #fce38a;
+                            border-bottom: 2px solid $color-yellow;
                         }
                         
                         &:hover, &:active{
-                            color: #fce38a;
+                            color: $color-yellow;
                             text-decoration: none;
                             
                         }
@@ -199,7 +198,7 @@ header{
                     width: 70px;
                     height: 3px;
                     bottom:45px;
-                    border-top: 3px solid #f38181; 
+                    border-top: 3px solid $color-red; 
                 }
 
                 span{
