--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,8 +13,8 @@
 // Parts
 @import "_general.scss";
 @import "_header.scss";
-@import "_footer.scss";
 @import "_hero.scss";
+@import "_blog.scss";
 @import "_team.scss";
 @import "_media.scss";
 
