--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -1,108 +1,104 @@
 .blog{
     width: 100%;
-    height: 770px;
+    // height: 770px;
 
-    .header-blog{
-        padding-top: 110px;
-        position: relative;
+    @extend %section-header;
 
-        h3 {
-            font-family: Kaushan Script;
-            font-size: 24px;
-            font-weight: 400;
-            color: #333333;
-            text-align: center;
-        }
-    
-        h2{
-            margin-top: 25px;
-            margin-bottom: 100px;
-            font-family: Montserrat;
-            font-size: 30px;
-            font-weight: 700;
-            text-transform: uppercase;
-            color: #333333;
-            text-align: center;
-            
-        }
-
-        &::after{
-            content: '';
-            position: absolute;
-            border-bottom: 3px solid $color-red;
-            width: 60px;
-            margin-left: -30px;
-            left: 50%;
-            top: 240px;
-        }
-    }
-
-    .items{
-        // width: 100px;
-        // height: 200px;
-
-        .blog-item-logo{
-            // width: 100%;
-            width:100%;
-            height: 100%;
-            position: relative;
-
-            .blog-item-logo__img{
-                width: 100%;
+    .blog-items{
+        margin-bottom: 70px;
+        // section.blog-item{
+        
+            .blog-item-logo{
+                // width: 100%;
+                width:100%;
                 height: 100%;
+                position: relative;
+
+                .blog-item-logo__img{
+                    width: 100%;
+                    height: 100%;
+                }
+
+                .blog-item-logo__date{
+                    position: absolute;
+                    width: 60px;
+                    height: 70px;
+                    background-color: $color-ocean;
+                    bottom: 10px;
+                    left: -7px;
+                    display: flex;
+                    justify-content: center;
+                    flex-direction: column;
+                    align-items: center;
+
+                    .blog-item-logo__date-day{
+                        font-family: Montserrat,Roboto;
+                        font-size: 30px;
+                        line-height: 1.2;
+                        font-weight: 700;
+                        color: #ffffff;
+                    }
+                    .blog-item-logo__date-month{
+                        font-family: Montserrat,Roboto;
+                        font-size: 15px;
+                        line-height: 1.2;
+                        font-weight: 300;
+                        font-style: italic;
+                        text-transform: uppercase;
+                        color: #ffffff;
+                    }
+                }
             }
 
-            .blog-item-logo__date{
-                position: absolute;
-                width: 60px;
-                height: 70px;
-                background-color: #95e1d3;
-                bottom: 10px;
-                left: -7px;
-                display: flex;
-                justify-content: center;
-                flex-direction: column;
-                align-items: center;
+            .blog-item-content{
+                width: 100%;
 
-                .blog-item-logo__date-day{
-                    font-family: Montserrat,Roboto;
-                    font-size: 30px;
-                    line-height: 1.2;
-                    font-weight: 700;
-                    color: #ffffff;
-                }
-                .blog-item-logo__date-month{
-                    font-family: Montserrat,Roboto;
-                    font-size: 15px;
-                    line-height: 1.2;
-                    font-weight: 300;
-                    font-style: italic;
+                .blog-item-content__title{
+                    font-family: Montserrat;
+                    font-size: 14px;
+                    font-weight: 600;
                     text-transform: uppercase;
-                    color: #ffffff;
+                    color: #333333;
+                    margin-top: 20px;
+                    text-align: left;
+                    margin-bottom: 10px;
+                }
+
+                .blog-item-content__text{
+                    font-family: Roboto;
+                    font-size: 15px;
+                    line-height: 24px;
+                    font-weight: 400;
+                    color: #999999;
+                    padding: 0;
+                    margin: 0;
                 }
             }
-        }
 
-        .blog-item-content{
-            width: 100%;
-
-            .blog-item-content__title{
-                font-family: Montserrat;
-                font-size: 14px;
-                font-weight: 400;
-                text-transform: uppercase;
-                color: #333333;
+            .blog-item-meta{
+                display: flex;
+                justify-content: flex-start;
                 margin-top: 20px;
-            }
+                margin-bottom: 50px;
+                padding-top: 20px;
+                border-top: 1px solid #e5e5e5;
+                
 
-            .blog-item-content__text{
+            .blog-item-meta__views, .blog-item-meta__comments{
                 font-family: Roboto;
                 font-size: 15px;
-                line-height: 24px;
-                font-weight: 400;
+                font-weight: 300;
+                font-style: italic;
                 color: #999999;
+                margin-right: 20px;
+
+                i.fas{
+                    margin-right: 5px;
+                    color: $color-ocean;
+                }
             }
-        }
+            }
+        // }
     }
     
 }
