--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,6 +15,7 @@
 @import "_header.scss";
 @import "_hero.scss";
 @import "_blog.scss";
+@import "_whatwedo.scss";
 @import "_team.scss";
 @import "_media.scss";
 
