--- a/scss/_team.scss
+++ b/scss/_team.scss
@@ -1,3 +1,143 @@
-.text{
-    border: 1px solid red;
+.ourTeam{
+    width: 100%;
+    height: 1050px;
+    background-color: #fff;
+
+    @extend %section-header;
+
+    .ourTeam-subheader{
+        font-family: Roboto;
+        font-size: 15px;
+        line-height: 24px;
+        font-weight: 400;
+        color: #999999;
+        text-align: center;
+        padding-left: 5%;
+        padding-right: 5%;
+        margin-bottom: 90px;
+    }
+    
+    .ourTeam-item{
+        width: 100%;
+        max-width: 380px;
+        height:auto;
+
+        .ourTeam-item__img{
+            width: 100%;
+            height:auto;
+            position: relative;
+
+            img{
+                width: 100%;
+                height:auto;
+                position: relative;
+                display: block;
+            }
+
+            .overlay {
+                position: absolute;
+                top: -10px;
+                bottom: 0;
+                left: -10px;
+                right: 0;
+                height: 100%;
+                width: 100%;
+                opacity: 0;
+                z-index: 3;
+                transition: .3s ease;
+                background-image: linear-gradient(0.0deg, $color-yellow 0%, $color-red 100%);
+                box-shadow: 10px 10px $color-ocean;
+                transition: box-shadow none;
+
+                .socials{
+                    position: absolute;
+                    left: 50%;
+                    top: 50%;
+                    margin-left: -112px;
+                    margin-top: -28px;
+
+                    ul{
+                        list-style: none;
+                        display: flex;
+                        
+                        li{
+                            border: 1px solid $color-red;
+                            width: 56px;
+                            height: 56px;
+                            background-color: $color-yellow;
+                            text-align: center;
+                            line-height: 52px;
+                            
+                            a{
+                                font-size: 26px;
+                                text-decoration: none;
+                                color: $color-red;
+                                transition: .5s ease;
+                                width: 100%;
+                                height: 100%;
+                                display: block;
+                                
+                                &:hover{
+                                    color: #fff;
+                                }
+                            }
+                        
+      
+                            &:not(:first-child){
+                                margin-left:-1px; 
+                            }
+
+                            &:hover{
+                                background-color: $color-red;
+                                cursor: pointer;
+                            }
+
+                            &:hover a{
+                                color: #fff;
+                            }
+                        }
+                    }
+                }
+
+                &:hover{
+                    opacity: 1;
+                    
+                    
+                }
+            }
+        }
+        
+        
+
+            
+        
+
+        .ourTeam-item__descr{
+            margin-top: 30px;
+            margin-bottom: 50px;
+            width: 100%;
+            
+
+            .ourTeam-item__descr-name{
+                font-family: Montserrat;
+                font-size: 14px;
+                font-weight: 600;
+                text-transform: uppercase;
+                color: #333333;
+                text-align: center;
+            }
+
+            .ourTeam-item__descr-role{
+                font-family: Roboto;
+                font-size: 15px;
+                line-height: 24px;
+                font-weight: 300;
+                font-style: italic;
+                color: #999999;
+                text-align: center;
+            }
+        }
+
+        
+    }
 }
